fix: remove whitespace at bottom

--- a/src/app/components/nav/SocialMediaBar.module.css
+++ b/src/app/components/nav/SocialMediaBar.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
-  padding-bottom: 40px;
+  padding-bottom: 32px;
 }
 
 .icon {
