--- a/src/app/views/home/Home.module.css
+++ b/src/app/views/home/Home.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  height: 100vh;
+  height: calc(100vh - 8px);
   transition: padding 0.75s;
 }
 
